tests/execution_outputs/NotaEmConceito.txt
Loaded: /opt/homebrew/Cellar/spim/9.1.24/share/exceptions.s
spim: (parser) syntax error on line 3 of file assembly_files/NotaEmConceito.asm
	  .asciiz ""Conceito: ""
	            ^
The following symbols are undefined:
main

Instruction references undefined symbol at 0x00400014
  [0x00400014]	0x0c000000  jal 0x00000000 [main]           ; 188: jal main
